src/Lec11_Encapsulation/StaticKeyword/Example/Processor.java
package Lec11_Encapsulation.StaticKeyword.Example;

public class Processor {

    static int number = 40; //error

    public static void main(String[] args) {
        System.out.println(number);
    }
}
